--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <div class="card" onclick="window.location.href='/Jogos'">Jogos</div>
+        <div class="card" onclick="window.location.href='./Jogos'">Jogos</div>
     </main>
 </body>
 </html>
