--- a/Jogos/index.html
+++ b/Jogos/index.html
@@ -7,7 +7,7 @@
     <title>Jogos</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0">
-    <link rel="stylesheet" href="/assets/css/inicialize.css">
+    <link rel="stylesheet" href="../assets/css/inicialize.css">
     <link rel="stylesheet" href="./assets/css/nav.css">
 </head>
 <body>
