--- a/Jogos/Cores/CoresQuadrado/index.html
+++ b/Jogos/Cores/CoresQuadrado/index.html
@@ -7,8 +7,8 @@
     
     <title>CORES QUADRADO</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0">
-    <link rel="stylesheet" href="/assets/css/inicialize.css">
-    <link rel="stylesheet" href="/Jogos/assets/css/nav.css">
+    <link rel="stylesheet" href="../../../assets/css/inicialize.css">
+    <link rel="stylesheet" href="../../Jogos/assets/css/nav.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <script src="./assets/js/script.js" defer></script>
