--- a/Jogos/Cores/index.html
+++ b/Jogos/Cores/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
 
     <link rel="stylesheet" href="../../assets/css/inicialize.css">
-    <link rel="stylesheet" href="..//Jogos/assets/css/cards.css">
-    <link rel="stylesheet" href="..//Jogos/assets/css/nav.css">
+    <link rel="stylesheet" href="../../Jogos/assets/css/cards.css">
+    <link rel="stylesheet" href="../../Jogos/assets/css/nav.css">
 </head>
 <body>
     <nav>
