--- a/Jogos/Cores/CoresRetangulo/index.html
+++ b/Jogos/Cores/CoresRetangulo/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="../../../assets/css/inicialize.css">
-    <link rel="stylesheet" href="../../Jogos/assets/css/nav.css">
+    <link rel="stylesheet" href="../../../Jogos/assets/css/nav.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     
     <script src="./assets/js/script.js" defer></script>
