Add imagens e criando a tela de desafios

--- a/Desafios/index.html
+++ b/Desafios/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogos</title>
+    <title>Desafios</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="../assets/css/inicialize.css">
@@ -15,14 +15,14 @@
     <nav>
         <div class="container">
           <span class="material-symbols-sharp" onclick="window.location.href='../'">arrow_back_ios</span>
-          <h1>Jogos</h1>
+          <h1>Desafios</h1>
           <span class="material-symbols-sharp">info</span>
         </div>
     </nav>
     <main>
-        <div class="card" onclick="window.location.href='./Cores'">
-            <img src="./Cores/assets/img/color.png" class="g">
-            <h1>Cores</h1>
+        <div class="card" onclick="window.location.href='./Matematicos'">
+            <img src="./Matematicos/assets/img/matematica.png" alt="">
+            <h1>Matematicos</h1>
         </div>
     </main>
 </body>
