--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./assets/css/inicialize.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Ensino</title>
 </head>
 <body>
     <main>
-        <div class="card" onclick="window.location.href='./Jogos'">Jogos</div>
+        <div class="card" onclick="window.location.href='./Jogos'">
+            <img src="./Jogos/assets/img/play.png" alt="">
+            <h1>JOGOS</h1>
+        </div>
+        <div class="card" onclick="window.location.href='./Desafios'">
+            <img src="./Desafios/assets/img/puzzele.png" alt="">
+            <h1>DESAFIOS</h1>
+        </div>
     </main>
 </body>
 </html>
