--- a/Desafios/Matematicos/Imediatos/index.html
+++ b/Desafios/Matematicos/Imediatos/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imediatos Distantes</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="/assets/css/inicialize.css">
-    <link rel="stylesheet" href="/Jogos/assets/css/nav.css">
+    <link rel="stylesheet" href="../../../assets/css/inicialize.css">
+    <link rel="stylesheet" href="../../../Jogos/assets/css/nav.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+
+    <script src="./assets/js/script.js" defer></script>
+
 </head>
 <body>
     <nav>
@@ -18,7 +22,9 @@
         </div>
     </nav>
     <main>
+        <h2></h2>
         <div class="box"></div>
+        <button>VERIFICAR</button>
     </main>
 </body>
 </html>
