--- a/Desafios/Matematicos/Imediatos/index.html
+++ b/Desafios/Matematicos/Imediatos/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../../Jogos/assets/css/nav.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <script src="./assets/js/script.js" defer></script>
+    <script src="./script.js" defer></script>
 
 </head>
 <body>
