--- a/Desafios/Matematicos/Imediatos/index.html
+++ b/Desafios/Matematicos/Imediatos/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="../../../assets/css/inicialize.css">
     <link rel="stylesheet" href="../../../Jogos/assets/css/nav.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./style.css">
 
     <script src="./script.js" defer></script>
 
