--- a/Desafios/Matematicos/Imediatos/index.html
+++ b/Desafios/Matematicos/Imediatos/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imediatos Distantes</title>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
+
     <link rel="stylesheet" href="../../../assets/css/inicialize.css">
     <link rel="stylesheet" href="../../../Jogos/assets/css/nav.css">
-    <link rel="stylesheet" href="./style.css">
 
-    <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="./assets/js/script.js" defer></script>
 
 </head>
 <body>
@@ -22,9 +24,37 @@
         </div>
     </nav>
     <main>
-        <h2></h2>
-        <div class="box"></div>
-        <button>VERIFICAR</button>
+        <div class="boxGame">
+            <h2>
+                Preencha as lacunas com todos os número de 1 ao 8, de modo que nenhum número fique próximo do seu sucessor ou antecessor!
+            </h2>
+            <div class="game"></div>
+            <button>VERIFICAR</button>
+            <div class="boxRealod">
+                <h3 class="error">Ops. Tente Novamente!</h3>
+            </div>
+        </div>
+        
+        <div class="boxConf">
+            <div class="boxInit">
+                <h1>INICIAR JOGO</h1>
+                <details>
+                    <summary>Detalhes do jogo</summary>
+                    <p>
+                        Preencha as lacunas com todos os número de 1 ao 8, de modo que nenhum número fique próximo do seu sucessor ou antecessor!
+                    </p>
+                </details>
+                <h2></h2>
+                <select>
+                    <option value="8">8 Números</option>
+                    <option value="10">10 Números</option>
+                </select>
+                <div class="boxBtns">
+                    <button class="sair" onclick="window.location.href='../'">SAIR</button>
+                    <button class="jogar">JOGAR</button>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
