--- a/Desafios/Matematicos/Imediatos/index.html
+++ b/Desafios/Matematicos/Imediatos/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imediatos Distantes</title>
+    <meta name="description" content="Preencha as lacunas com todos os números possíveis, de modo que nenhum número fique próximo do seu sucessor ou antecessor!">
+    <meta property="og:description" content="Preencha as lacunas com todos os números possíveis, de modo que nenhum número fique próximo do seu sucessor ou antecessor!">
+    <meta property="og:image" content="./assets/img/Imediatos.png">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
 
@@ -26,7 +29,7 @@
     <main>
         <div class="boxGame">
             <h2>
-                Preencha as lacunas com todos os número de 1 ao 8, de modo que nenhum número fique próximo do seu sucessor ou antecessor!
+                Preencha as lacunas com todos os números de 1 ao 8, de modo que nenhum número fique próximo do seu sucessor ou antecessor!
             </h2>
             <div class="game"></div>
             <button>VERIFICAR</button>
@@ -41,7 +44,7 @@
                 <details>
                     <summary>Detalhes do jogo</summary>
                     <p>
-                        Preencha as lacunas com todos os número de 1 ao 8, de modo que nenhum número fique próximo do seu sucessor ou antecessor!
+                        Preencha as lacunas com todos os números de 1 ao 8, de modo que nenhum número fique próximo do seu sucessor ou antecessor!
                     </p>
                 </details>
                 <h2></h2>
