--- a/Desafios/Matematicos/Soma15/index.html
+++ b/Desafios/Matematicos/Soma15/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imediatos Distantes</title>
+    <title>Soma15</title>
 
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Gui Rocha">
-    <meta name="description" content="Preencha as lacunas com todos os números possíveis, de modo que nenhum número fique próximo do seu sucessor ou antecessor!">
-    <meta property="og:description" content="Preencha as lacunas com todos os números possíveis, de modo que nenhum número fique próximo do seu sucessor ou antecessor!">
-    <meta property="og:image" content="./assets/img/Imediatos.png">
+    <meta name="description" content="Preencha as lacunas com todos os números de 1 ao 9, de modo que a soma em todas as direções resulte em 15!">
+    <meta property="og:description" content="Preencha as lacunas com todos os números de 1 ao 9, de modo que a soma em todas as direções resulte em 15!">
+    <meta property="og:image" content="./assets/img/imgJogo.png">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
 
@@ -19,20 +19,19 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/js/script.js" defer></script>
-
 </head>
 <body>
     <nav>
         <div class="container">
             <span class="material-symbols-sharp" onclick="window.location.href='../'">arrow_back_ios</span>
-            <h1>Imediatos distantes</h1>
+            <h1>Soma15</h1>
             <span class="material-symbols-sharp">info</span>
         </div>
     </nav>
     <main>
         <div class="boxGame">
             <h2>
-                Preencha as lacunas com todos os números de 1 ao 8, de modo que nenhum número fique próximo do seu sucessor ou antecessor!
+                Preencha as lacunas com todos os números de 1 ao 9, de modo que a soma em todas as direções resulte em 15!
             </h2>
             <div class="game"></div>
             <button>VERIFICAR</button>
@@ -47,14 +46,10 @@
                 <details>
                     <summary>Detalhes do jogo</summary>
                     <p>
-                        Preencha as lacunas com todos os números de 1 ao 8, de modo que nenhum número fique próximo do seu sucessor ou antecessor!
+                        Preencha as lacunas com todos os números de 1 ao 9, de modo que a soma em todas as direções resulte em 15!
                     </p>
                 </details>
                 <h2></h2>
-                <select>
-                    <option value="8">8 Números</option>
-                    <option value="10">10 Números</option>
-                </select>
                 <div class="boxBtns">
                     <button class="sair" onclick="window.location.href='../'">SAIR</button>
                     <button class="jogar">JOGAR</button>
