--- a/Desafios/Matematicos/index.html
+++ b/Desafios/Matematicos/index.html
@@ -21,13 +21,13 @@
     </nav>
     <main>
         <div class="card" onclick="window.location.href='./Imediatos'">
-            <img src="./assets/img/CoresQuadrado.png" alt="">
+            <img src="./Imediatos/assets/img/imgJogo.png" alt="">
             <h1>IMEDIATOS DISTANTES</h1>
         </div>
-        <!--div class="card" onclick="window.location.href='./CoresRetangulo'">
-            <img src="./assets/img/CoresRetangulo.png" alt="">
-            <h1>Cores Retangulos</h1>
-        </div-->
+        <div class="card" onclick="window.location.href='./Soma15'">
+            <img src="./Soma15/assets/img/imgJogo.png" alt="">
+            <h1>Soma15</h1>
+        </div>
         <!--div class="card" onclick="window.location.href='./CoresRetangulo'">
             <img src="./assets/img/CoresRetangulo.png" alt="">
             <h1>Cores Palavras</h1>
