Adicionando níveis de dificuldades

--- a/Desafios/Matematicos/Soma15/index.html
+++ b/Desafios/Matematicos/Soma15/index.html
@@ -50,6 +50,11 @@
                     </p>
                 </details>
                 <h2></h2>
+                <select>
+                    <option value="3">9 Números</option>
+                    <option value="4">16 Números</option>
+                    <option value="5">25 Números</option>
+                </select>
                 <div class="boxBtns">
                     <button class="sair" onclick="window.location.href='../'">SAIR</button>
                     <button class="jogar">JOGAR</button>
