--- a/Desafios/Matematicos/Soma15/index.html
+++ b/Desafios/Matematicos/Soma15/index.html
@@ -24,7 +24,7 @@
     <nav>
         <div class="container">
             <span class="material-symbols-sharp" onclick="window.location.href='../'">arrow_back_ios</span>
-            <h1>Soma15</h1>
+            <h1>Quadrados Mágicos</h1>
             <span class="material-symbols-sharp">info</span>
         </div>
     </nav>
