--- a/Desafios/Matematicos/index.html
+++ b/Desafios/Matematicos/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="card" onclick="window.location.href='./Soma15'">
             <img src="./Soma15/assets/img/imgJogo.png" alt="">
-            <h1>Soma15</h1>
+            <h1>Quadrados Mágicos</h1>
         </div>
         <!--div class="card" onclick="window.location.href='./CoresRetangulo'">
             <img src="./assets/img/CoresRetangulo.png" alt="">
