Criando o jogo Triângulos Mágicos

--- a/Desafios/Matematicos/index.html
+++ b/Desafios/Matematicos/index.html
@@ -21,17 +21,17 @@
     </nav>
     <main>
         <div class="card" onclick="window.location.href='./Imediatos'">
-            <img src="./Imediatos/assets/img/imgJogo.png" alt="">
+            <img src="./Imediatos/assets/img/imgJogo.png">
             <h1>IMEDIATOS DISTANTES</h1>
         </div>
-        <div class="card" onclick="window.location.href='./Soma15'">
-            <img src="./Soma15/assets/img/imgJogo.png" alt="">
+        <div class="card" onclick="window.location.href='./QuadradosMagicos'">
+            <img src="./QuadradosMagicos/assets/img/imgJogo.png">
             <h1>Quadrados Mágicos</h1>
         </div>
-        <!--div class="card" onclick="window.location.href='./CoresRetangulo'">
-            <img src="./assets/img/CoresRetangulo.png" alt="">
-            <h1>Cores Palavras</h1>
-        </div-->
+        <div class="card" onclick="window.location.href='./TriangulosMagicos'">
+            <img src="./TriangulosMagicos/assets/img/imgJogo.png">
+            <h1>Triângulos Mágicos</h1>
+        </div>
     </main>
 </body>
 </html>
