--- a/Desafios/Matematicos/QuadradosMagicos/index.html
+++ b/Desafios/Matematicos/QuadradosMagicos/index.html
@@ -8,8 +8,8 @@
 
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Gui Rocha">
-    <meta name="description" content="Preencha as lacunas com todos os números de 1 ao 9, de modo que a soma em todas as direções resulte em 15!">
-    <meta property="og:description" content="Preencha as lacunas com todos os números de 1 ao 9, de modo que a soma em todas as direções resulte em 15!">
+    <meta name="description" content="Preencha as lacunas com todos os números possíveis, de modo que a soma em todas as direções resulte em 15!">
+    <meta property="og:description" content="Preencha as lacunas com todos os números possíveis, de modo que a soma em todas as direções resulte em 15!">
     <meta property="og:image" content="./assets/img/imgJogo.png">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
