--- a/Desafios/Matematicos/TriangulosMagicos/index.html
+++ b/Desafios/Matematicos/TriangulosMagicos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imediatos Distantes</title>
+    <title>Triângulos Mágicos</title>
 
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Gui Rocha">
@@ -47,14 +47,14 @@
                 <details>
                     <summary>Detalhes do jogo</summary>
                     <p>
-                        Preencha as lacunas com todos os números de 1 ao 6, de modo que a soma de todos os lados resulte em 9!
+                        Preencha as lacunas com todos os números de 1 ao 6, de modo que a soma de todos os lados resulte em <strong>9</strong>!
                     </p>
                 </details>
                 <h2>
                 </h2>
                 <select>
                     <option value="6">6 Números</option>
-                    <!-- <option value="9">9 Números</option> -->
+                    <option value="9">9 Números</option>
                 </select>
                 <div class="boxBtns">
                     <button class="sair" onclick="window.location.href='../'">SAIR</button>
