--- a/Desafios/Matematicos/TriangulosMagicos/index.html
+++ b/Desafios/Matematicos/TriangulosMagicos/index.html
@@ -25,7 +25,7 @@
     <nav>
         <div class="container">
             <span class="material-symbols-sharp" onclick="window.location.href='../'">arrow_back_ios</span>
-            <h1>Imediatos distantes</h1>
+            <h1>Triângulos Mágicos</h1>
             <span class="material-symbols-sharp">info</span>
         </div>
     </nav>
