Corrigindo linguagem e add desafio 4 4's

--- a/Desafios/Matematicos/index.html
+++ b/Desafios/Matematicos/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,6 +31,10 @@
         <div class="card" onclick="window.location.href='./TriangulosMagicos'">
             <img src="./TriangulosMagicos/assets/img/imgJogo.png">
             <h1>Triângulos Mágicos</h1>
+        </div>
+        <div class="card" onclick="window.location.href='./QuatroQuatros'">
+            <img src="./QuatroQuatros/assets/img/imgJogo.png">
+            <h1>Quatro Quatros</h1>
         </div>
     </main>
 </body>
