Add ensino de matematica

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <main>
+        <div class="card" onclick="window.location.href='./Ensino'">
+            <img src="./Ensino/assets/img/ensino.png" alt="">
+            <h1>ENSINO</h1>
+        </div>
         <div class="card" onclick="window.location.href='./Jogos'">
             <img src="./Jogos/assets/img/play.png" alt="">
             <h1>JOGOS</h1>
