--- a/Ensino/Matematica/PrimeiroAno/Adicao/index.html
+++ b/Ensino/Matematica/PrimeiroAno/Adicao/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imediatos Distantes</title>
+    <title>Adição</title>
 
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Gui Rocha">
@@ -32,7 +32,8 @@
     <main>
         <div class="boxGame">
             <h2>
-                Preencha as lacunas com todos os números de 1 ao 8, de modo que nenhum número fique próximo do seu sucessor ou antecessor!
+                <p>VAMOS CONTAR?</p>
+                <p>Há quantas maçãs e quantas laranjas?</p>
             </h2>
             <div class="game">
                 <div class="box">
