--- a/Ensino/Matematica/PrimeiroAno/Adicao/index.html
+++ b/Ensino/Matematica/PrimeiroAno/Adicao/index.html
@@ -33,7 +33,7 @@
         <div class="boxGame">
             <h2>
                 <p>VAMOS CONTAR?</p>
-                <p>HÁ QUANATAS MAÇÃS E QUANTAS LARANJAS?</p>
+                <p>HÁ QUANTAS MAÇÃS E QUANTAS LARANJAS?</p>
             </h2>
             <div class="game">
                 <div class="box">
