--- a/Ensino/Matematica/PrimeiroAno/Adicao/index.html
+++ b/Ensino/Matematica/PrimeiroAno/Adicao/index.html
@@ -71,6 +71,7 @@
         </div>
     </main>
     <audio src="./assets/music/comemorando.mp3" id="certo"></audio>
+    <audio src="./assets/music/aplauso.mp3" id="aplauso"></audio>
     <audio src="./assets/music/ops.mp3" id="errado"></audio>
 </body>
 </html>
