--- a/Ensino/Matematica/QuartoAno/index.html
+++ b/Ensino/Matematica/QuartoAno/index.html
@@ -4,29 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matematicos</title>
+    <title>Quarto Ano</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
 
-    <link rel="stylesheet" href="../../assets/css/inicialize.css">
-    <link rel="stylesheet" href="../../Jogos/assets/css/cards.css">
-    <link rel="stylesheet" href="../../Jogos/assets/css/nav.css">
+    <link rel="stylesheet" href="../../../assets/css/inicialize.css">
+    <link rel="stylesheet" href="../../../Jogos/assets/css/cards.css">
+    <link rel="stylesheet" href="../../../Jogos/assets/css/nav.css">
 </head>
 <body>
     <nav>
         <div class="container">
             <span class="material-symbols-sharp" onclick="window.location.href='../'">arrow_back_ios</span>
-            <h1>Matemática</h1>
+            <h1>Quarto Ano</h1>
             <span class="material-symbols-sharp">info</span>
         </div>
     </nav>
     <main>
-        <div class="card" onclick="window.location.href='./PrimeiroAno'">
-            <img src="./PrimeiroAno/assets/img/img.png">
-            <h1>Primeiro ano</h1>
-        </div>
-        <div class="card" onclick="window.location.href='./QuartoAno'">
-            <img src="./QuartoAno/assets/img/img.png">
-            <h1>Quarto ano</h1>
+        <div class="card" onclick="window.location.href='./Multiplicacao'">
+            <img src="./Multiplicacao/assets/img/img.png">
+            <h1>Multiplicação</h1>
         </div>
     </main>
 </body>
