--- a/Ensino/Matematica/PrimeiroAno/Adicao/index.html
+++ b/Ensino/Matematica/PrimeiroAno/Adicao/index.html
@@ -8,7 +8,7 @@
 
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Gui Rocha">
-    <meta name="description" content="Preencha as lacunas com todos os números possíveis, de modo que nenhum número fique próximo do seu sucessor ou antecessor!">
+    <meta name="description" content="VAMOS CONTAR">
     <meta property="og:description" content="Preencha as lacunas com todos os números possíveis, de modo que nenhum número fique próximo do seu sucessor ou antecessor!">
     <meta property="og:image" content="./assets/img/Imediatos.png">
 
